src/Components/Header.module.css
@import url("https://fonts.googleapis.com/css2?family=Tillana:wght@400;500;600;700;800&display=swap");

.header {
  position: sticky;
  top: 0;
  z-index: 1;
  background: #ffaaaa;
  border-bottom: 1px solid #d46a6a;
  height: 10vh;
}

.header h1 {
  font-family: "Tillana", system-ui;
  font-weight: 600;
  font-style: normal;
}

.logo {
  display: flex;
  flex-direction: column;
  justify-content: center;
  color: #198754;
}

.logo:hover {
  cursor: pointer;
}

.dropdown {
  background: none;
  border: none;
  display: flex;
  justify-content: center;
  align-items: center;
  color: #550000;
}

.dropdown::after {
  display: none;
}

.dropdownItem {
  color: #550000;
}

.dropdownItem:hover {
  background-color: #ffaaaa;
}

.icon {
  position: relative;
  padding: 5px;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
}

.numberOfItems {
  display: block;
  position: absolute;
  bottom: 0;
  right: 0;
  width: 16px;
  height: 16px;
  background: #740000;
  color: #fbc3c3;
  border-radius: 50%;
  font-size: 0.6rem;
  font-weight: bold;
  text-align: center;
}

.btn:hover,
.btn:active,
.btn:focus,
.btn.show {
  background-color: #ffaaaa;
  border-color: #ffaaaa;
}

